# YGB-DiscordBot

./: .gitignore  README.md  pyproject.toml  setup.cfg
.github/workflows/: ci.yml
src/: .env.default  config_example.json  main.py  utils.py  watchdog.py
src/cogs/: invite_check.py  media_rate.py  message_logging.py
