[tool.poetry]
name = "ygb-discord-bot"
version = "0.1.0"
description = ""
authors = ["RRR-09 <79768142+RRR-09@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = ">=3.8"
python-dotenv = "^0.19.2"
nextcord = {extras = ["speed"], version = "^2.0.0-alpha.6"}
pytz = "^2021.3"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
bandit = "^1.7.1"
flake8 = "^4.0.1"
isort = "^5.10.1"
mypy = "^0.920"
ossaudit = "^0.5.0"
types-pytz = "^2021.3.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# Customizations
[tool.isort]
src_paths=["src"]
profile = "black"

[tool.mypy]
python_version = "3.10"

[[tool.mypy.overrides]]
module = ["nextcord.*", "cogs.*"]
ignore_missing_imports = true
